--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.2.1",
+    "@vue/compiler-sfc": "^3.1.4",
     "glob": "^7.1.7",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^2.2.4",
+    "vue-loader": "^16.3.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
   }
