--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "glob": "^7.1.7",
     "npm-run-all": "^4.1.5",
     "tailwindcss": "^2.2.4",
+    "ts-loader": "^9.2.3",
+    "typescript": "^4.3.5",
     "vue-loader": "^16.3.0",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
