--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,7 @@
 x64/
 [Bb]in/
 [Oo]bj/
+Scripts/dist/
 # build folder is nowadays used for build scripts and should not be ignored
 #build/
 
@@ -60,7 +61,6 @@ x64/
 
 # OS generated files #
 .DS_Store*
-Icon?
 
 # Visual C++ cache files
 ipch/
