--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@headlessui/vue": "^1.3.0",
+    "@vueuse/core": "^5.1.3",
     "vee-validate": "^4.4.6",
     "vue": "^3.1.4",
     "yup": "^0.32.9"
