idk what I changed

--- a/Web.config
+++ b/Web.config
@@ -4,7 +4,11 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
-	<system.web>
+	<connectionStrings>
+  <add name="ArtGalleryDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ArtGallery.mdf;Integrated Security=True"
+   providerName="System.Data.SqlClient" />
+ </connectionStrings>
+ <system.web>
 		<compilation debug="true" targetFramework="4.7.2" />
 		<httpRuntime targetFramework="4.7.2" />
 		<pages>
@@ -38,14 +42,14 @@
 	<location path="Auth">
 		<system.web>
 			<authorization>
-				<allow users ="*" />
+				<allow users="*"  />
 			</authorization>
 		</system.web>
 	</location>
 	<location path="Api/UserAuth.asmx">
 		<system.web>
 			<authorization>
-				<allow users ="*" />
+				<allow users="*"  />
 			</authorization>
 		</system.web>
 	</location>
