--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -210,7 +210,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Scripts\dist\" />
-    <Folder Include="Sql\" />
+    <Folder Include="Sql\data\" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
