Added mock data for Author, User and Card

--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -114,6 +114,10 @@
     <Content Include="App_Data\ArtGallery_log.ldf">
       <DependentUpon>ArtGallery.mdf</DependentUpon>
     </Content>
+    <Content Include="App_Data\Database1.mdf" />
+    <Content Include="App_Data\Database1_log.ldf">
+      <DependentUpon>Database1.mdf</DependentUpon>
+    </Content>
     <Content Include="Auth\Login.aspx" />
     <Content Include="Content\Site.css" />
     <Content Include="Default.aspx" />
