--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -179,14 +179,19 @@
     </Compile>
     <Compile Include="Home.aspx.cs">
       <DependentUpon>Home.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
     </Compile>
     <Compile Include="Home.aspx.designer.cs">
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\ApiResponse.cs" />
+    <Compile Include="Models\Entities\Art.cs" />
+    <Compile Include="Models\Entities\Author.cs" />
     <Compile Include="Models\Error.cs" />
-    <Compile Include="Models\Response.cs" />
+    <Compile Include="Models\Queries\ArtQuery.cs" />
+    <Compile Include="Models\LoginResponse.cs" />
     <Compile Include="Models\SessionData.cs" />
+    <Compile Include="Models\ISqlParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
@@ -206,6 +211,7 @@
       <DependentUpon>UserAuth.asmx</DependentUpon>
       <SubType>Component</SubType>
     </Compile>
+    <Compile Include="Utils\Database.cs" />
     <Compile Include="Utils\Helper.cs" />
   </ItemGroup>
   <ItemGroup>
