--- a/Bundle.config
+++ b/Bundle.config
@@ -2,5 +2,6 @@
 <bundles version="1.0">
   <styleBundle path="~/Content/css">
     <include path="~/Content/tailwind.css" />
+    <include path="~/Content/Site.css" />
   </styleBundle>
 </bundles>
