--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -203,10 +203,13 @@
     <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\Entities\Art.cs" />
     <Compile Include="Models\Entities\Author.cs" />
+    <Compile Include="Models\Entities\FavArt.cs" />
+    <Compile Include="Models\Entities\Favourite.cs" />
+    <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Queries\ArtQuery.cs" />
     <Compile Include="Models\LoginResponse.cs" />
-    <Compile Include="Models\Queries\ArtDetailQuery.cs" />
+    <Compile Include="Models\Queries\FavQuery.cs" />
     <Compile Include="Models\Queries\UserQuery.cs" />
     <Compile Include="Models\SessionData.cs" />
     <Compile Include="Models\ISqlParser.cs" />
