--- a/Web.config
+++ b/Web.config
@@ -17,14 +17,18 @@
     <pages>
       <namespaces>
         <add namespace="System.Web.Optimization" />
-	    <add namespace="Microsoft.AspNet.Identity"/>
+	    <add namespace="Microsoft.AspNet.Identity" />
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
       </controls>
     </pages>
-    <!-- Use session state in memory and set to a 30 minute timout -->
-    <sessionState mode="InProc" timeout="30" />
+    <!-- Use session state in memory and set to a 24 hours (1440 mins) timout -->
+    <sessionState mode="InProc" customProvider="DefaultSessionProvider" timeout="1440">
+      <providers>
+        <add name="DefaultSessionProvider" type="System.Web.Providers.DefaultSessionStateProvider, System.Web.Providers, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" connectionStringName="ArtGalleryDB" />
+      </providers>
+    </sessionState>
     <!-- Enable Forms Authentication -->
     <!--<authentication mode="Forms">
       <forms name="ArtGalleryCookie" loginUrl="Default.aspx" defaultUrl="Home.aspx" timeout="30">
@@ -66,6 +70,10 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.2.0.0" newVersion="4.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
