--- a/Web.config
+++ b/Web.config
@@ -41,6 +41,7 @@
     <!--<authorization>
       <deny users="?" />
     </authorization>-->
+    <customErrors mode="On" />
   </system.web>
   <!-- Public path that should be available to everyone -->
   <location path="Auth">
