--- a/Web.config
+++ b/Web.config
@@ -38,20 +38,19 @@
       </forms>
     </authentication>-->
     <!-- Deny anonymous users to protected path -->
-    <!--<authorization>
+    <authorization>
       <deny users="?" />
-    </authorization>-->
-    <customErrors mode="On" />
+    </authorization>
   </system.web>
   <!-- Public path that should be available to everyone -->
-  <location path="Auth">
+  <location path="Default.aspx">
     <system.web>
       <authorization>
         <allow users="*" />
       </authorization>
     </system.web>
   </location>
-  <location path="Api/UserAuth.asmx">
+  <location path="Api/Auth.aspx">
     <system.web>
       <authorization>
         <allow users="*" />
