--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^5.1.3",
     "vee-validate": "^4.4.6",
     "vue": "^3.1.4",
+    "vuex": "^3.6.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
