Finished setting up the database layer

--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -219,6 +219,9 @@
     <Compile Include="ArtDetail.aspx.designer.cs">
       <DependentUpon>ArtDetail.aspx</DependentUpon>
     </Compile>
+    <Compile Include="DAL\ArtGalleryDbContext.cs" />
+    <Compile Include="DAL\GenericRepository.cs" />
+    <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="Dashboard.aspx.cs">
       <DependentUpon>Dashboard.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -254,8 +257,10 @@
     <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Models\Identity\UserRole.cs" />
     <Compile Include="Models\Identity\UserTable.cs" />
-    <Compile Include="Models\Entities\FavArt.cs" />
-    <Compile Include="Models\Entities\Favourite.cs" />
+    <Compile Include="Models\OldEntities\Art.cs" />
+    <Compile Include="Models\OldEntities\Author.cs" />
+    <Compile Include="Models\OldEntities\FavArt.cs" />
+    <Compile Include="Models\OldEntities\Favourite.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Queries\ArtQuery.cs" />
     <Compile Include="Models\Queries\FavQuery.cs" />
