--- a/Web.config
+++ b/Web.config
@@ -21,6 +21,7 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <add tagPrefix="uc" src="~/User_Control/References.ascx" tagName="References"/>
       </controls>
     </pages>
     <!-- Use session state in memory and set to a 24 hours (1440 mins) timout -->
