Done creating DAL

--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -249,12 +249,13 @@
     <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\Entities\Art.cs" />
     <Compile Include="Models\Entities\Author.cs" />
+    <Compile Include="Models\Entities\FavArt.cs" />
+    <Compile Include="Models\Entities\Favourite.cs" />
     <Compile Include="Models\Error.cs" />
     <Compile Include="Models\Identity\Role.cs" />
     <Compile Include="Models\Identity\UserClaim.cs" />
     <Compile Include="Models\Identity\UserLogin.cs" />
     <Compile Include="Models\Identity\User.cs" />
-    <Compile Include="Models\Entities\User.cs" />
     <Compile Include="Models\Identity\UserRole.cs" />
     <Compile Include="Models\Identity\UserTable.cs" />
     <Compile Include="Models\OldEntities\Art.cs" />
@@ -262,9 +263,9 @@
     <Compile Include="Models\OldEntities\FavArt.cs" />
     <Compile Include="Models\OldEntities\Favourite.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\OldEntities\User.cs" />
     <Compile Include="Models\Queries\ArtQuery.cs" />
     <Compile Include="Models\Queries\FavQuery.cs" />
-    <Compile Include="Models\Queries\UserQuery.cs" />
     <Compile Include="Models\ISqlParser.cs" />
     <Compile Include="Models\AuthRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
