--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,20 @@
   <connectionStrings>
     <add name="ArtGalleryDB" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ArtGallery.mdf;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
+
+  <system.web>
+    <customErrors mode="On" defaultRedirect="~/Error_Pages/Oops.aspx">
+      <error statusCode="404" redirect="~/Error_Pages/Oops.aspx"/>
+    </customErrors>
+  </system.web>
+
+  <system.webServer>
+    <httpErrors errorMode="Custom" existingResponse="Replace">
+    <remove statusCode="404"/>
+      <error statusCode="404" path="~/Error_Pages/Oops.aspx" responseMode="ExecuteURL" />
+    </httpErrors>
+  </system.webServer>
+  
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
     <httpRuntime targetFramework="4.7.2" />
@@ -21,9 +35,10 @@
       </namespaces>
       <controls>
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
+        <!-- User control -->
         <add tagPrefix="uc" src="~/User_Control/References.ascx" tagName="References"/>
       </controls>
-    </pages>
+    </pages>    
     <!-- Use session state in memory and set to a 24 hours (1440 mins) timout -->
     <sessionState mode="InProc" customProvider="DefaultSessionProvider" timeout="1440">
       <providers>
