Added `UserDetail.aspx`, `About.aspx` and `Construction.aspx`, added error handling

--- a/Web.config
+++ b/Web.config
@@ -13,17 +13,18 @@
   </connectionStrings>
 
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error_Pages/Oops.aspx">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Error_Pages/Oops.aspx">
       <error statusCode="404" redirect="~/Error_Pages/Oops.aspx"/>
+      <error statusCode="500" redirect="~/Error_Pages/Internal.aspx"/>
     </customErrors>
   </system.web>
 
-  <system.webServer>
+  <!--<system.webServer>
     <httpErrors errorMode="Custom" existingResponse="Replace">
     <remove statusCode="404"/>
       <error statusCode="404" path="~/Error_Pages/Oops.aspx" responseMode="ExecuteURL" />
     </httpErrors>
-  </system.webServer>
+  </system.webServer>-->
   
   <system.web>
     <compilation debug="true" targetFramework="4.7.2" />
@@ -37,6 +38,7 @@
         <add assembly="Microsoft.AspNet.Web.Optimization.WebForms" namespace="Microsoft.AspNet.Web.Optimization.WebForms" tagPrefix="webopt" />
         <!-- User control -->
         <add tagPrefix="uc" src="~/User_Control/References.ascx" tagName="References"/>
+        <add tagPrefix="uc" src="~/User_Control/ErrorTemplate.ascx" tagName="ErrorTemplate"/>
       </controls>
     </pages>    
     <!-- Use session state in memory and set to a 24 hours (1440 mins) timout -->
