--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -157,6 +157,7 @@
     <Content Include="Content\Site.css" />
     <Content Include="Dashboard.aspx" />
     <Content Include="Default.aspx" />
+    <Content Include="Error_Pages\Internal.aspx" />
     <Content Include="Error_Pages\Oops.aspx" />
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
@@ -164,6 +165,8 @@
     <Content Include="Home.aspx" />
     <None Include="Scripts\src\components\ArtCard.vue" />
     <TypeScriptCompile Include="shims-vue.d.ts" />
+    <Content Include="UserDetail.aspx" />
+    <Content Include="User_Control\ErrorTemplate.ascx" />
     <Content Include="User_Control\References.ascx" />
     <Content Include="Scripts\src\HomePage.js" />
     <Content Include="User.aspx" />
@@ -262,6 +265,13 @@
     <Compile Include="Default.aspx.designer.cs">
       <DependentUpon>Default.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Error_Pages\Internal.aspx.cs">
+      <DependentUpon>Internal.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Error_Pages\Internal.aspx.designer.cs">
+      <DependentUpon>Internal.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Error_Pages\Oops.aspx.cs">
       <DependentUpon>Oops.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -302,6 +312,20 @@
     <Compile Include="Models\ISqlParser.cs" />
     <Compile Include="Models\AuthRole.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserDetail.aspx.cs">
+      <DependentUpon>UserDetail.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="UserDetail.aspx.designer.cs">
+      <DependentUpon>UserDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User_Control\ErrorTemplate.ascx.cs">
+      <DependentUpon>ErrorTemplate.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User_Control\ErrorTemplate.ascx.designer.cs">
+      <DependentUpon>ErrorTemplate.ascx</DependentUpon>
+    </Compile>
     <Compile Include="User_Control\References.ascx.cs">
       <DependentUpon>References.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
