--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -251,6 +251,7 @@
     <Compile Include="DAL\ApplicationDbContext.cs" />
     <Compile Include="DAL\Extensions\ArtsExtension.cs" />
     <Compile Include="DAL\Extensions\FavouriteExtension.cs" />
+    <Compile Include="DAL\Extensions\ShoppingCartExtension.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
     <Compile Include="DAL\UnitOfWork.cs" />
     <Compile Include="DAL\Extensions\UserLikesExtension.cs" />
