--- a/Web.config
+++ b/Web.config
@@ -39,7 +39,7 @@
         <!-- User control -->
         <add tagPrefix="uc" src="~/User_Control/References.ascx" tagName="References"/>
         <add tagPrefix="uc" src="~/User_Control/ErrorTemplate.ascx" tagName="ErrorTemplate"/>
-        <add tagPrefix="uc" src="~/User_Control/CreditCardInput.ascx" tagName="CreditCardInput"/>
+        <add tagPrefix="uc" src="~/User_Control/ErrorLabel.ascx" tagName="ErrorLabel"/>
       </controls>
     </pages>    
     <!-- Use session state in memory and set to a 24 hours (1440 mins) timout -->
