--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -165,6 +165,7 @@
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Home.aspx" />
     <None Include="Scripts\src\components\ArtCard.vue" />
+    <Content Include="User_Control\ErrorLabel.ascx" />
     <Content Include="Web.sitemap" />
     <TypeScriptCompile Include="shims-vue.d.ts" />
     <Content Include="SiteMap.aspx" />
@@ -346,6 +347,13 @@
     </Compile>
     <Compile Include="UserDetail.aspx.designer.cs">
       <DependentUpon>UserDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User_Control\ErrorLabel.ascx.cs">
+      <DependentUpon>ErrorLabel.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User_Control\ErrorLabel.ascx.designer.cs">
+      <DependentUpon>ErrorLabel.ascx</DependentUpon>
     </Compile>
     <Compile Include="User_Control\ErrorTemplate.ascx.cs">
       <DependentUpon>ErrorTemplate.ascx</DependentUpon>
