--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -307,6 +307,7 @@
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\ApiResponse.cs" />
+    <Compile Include="Models\DTO\CartItemDTO.cs" />
     <Compile Include="Models\Entities\Art.cs" />
     <Compile Include="Models\Entities\Author.cs" />
     <Compile Include="Models\Entities\ShoppingCart.cs" />
