--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -168,6 +168,7 @@
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Home.aspx" />
     <None Include="Scripts\src\components\ArtCard.vue" />
+    <Content Include="User_Control\CartItemNoQty.ascx" />
     <Content Include="User_Control\ErrorLabel.ascx" />
     <Content Include="Web.sitemap" />
     <TypeScriptCompile Include="shims-vue.d.ts" />
@@ -351,6 +352,13 @@
     </Compile>
     <Compile Include="UserDetail.aspx.designer.cs">
       <DependentUpon>UserDetail.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="User_Control\CartItemNoQty.ascx.cs">
+      <DependentUpon>CartItemNoQty.ascx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="User_Control\CartItemNoQty.ascx.designer.cs">
+      <DependentUpon>CartItemNoQty.ascx</DependentUpon>
     </Compile>
     <Compile Include="User_Control\ErrorLabel.ascx.cs">
       <DependentUpon>ErrorLabel.ascx</DependentUpon>
