--- a/Web.config
+++ b/Web.config
@@ -40,6 +40,7 @@
         <add tagPrefix="uc" src="~/User_Control/References.ascx" tagName="References"/>
         <add tagPrefix="uc" src="~/User_Control/ErrorTemplate.ascx" tagName="ErrorTemplate"/>
         <add tagPrefix="uc" src="~/User_Control/ErrorLabel.ascx" tagName="ErrorLabel"/>
+        <add tagPrefix="uc" src="~/User_Control/CartItemNoQty.ascx" tagName="CartItemNoQty"/>
       </controls>
     </pages>
     <!-- Use session state in memory and set to a 24 hours (1440 mins) timout -->
