Fixing DB logic (Adding other tables)

--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -255,8 +255,9 @@
       <DependentUpon>Construction.aspx</DependentUpon>
     </Compile>
     <Compile Include="DAL\ApplicationDbContext.cs" />
-    <Compile Include="DAL\Extensions\ArtsExtension.cs" />
+    <Compile Include="DAL\Extensions\ArtExtension.cs" />
     <Compile Include="DAL\Extensions\FavouriteExtension.cs" />
+    <Compile Include="DAL\Extensions\OrderExtenstion.cs" />
     <Compile Include="DAL\Extensions\ShoppingCartExtension.cs" />
     <Compile Include="DAL\GenericRepository.cs" />
     <Compile Include="DAL\UnitOfWork.cs" />
@@ -308,8 +309,16 @@
     </Compile>
     <Compile Include="Models\ApiResponse.cs" />
     <Compile Include="Models\DTO\CartItemDTO.cs" />
+    <Compile Include="Models\DTO\OrderDetailDTO.cs" />
+    <Compile Include="Models\Entities\Address.cs" />
     <Compile Include="Models\Entities\Art.cs" />
     <Compile Include="Models\Entities\Author.cs" />
+    <Compile Include="Models\Entities\BillingDetails.cs" />
+    <Compile Include="Models\Entities\Card.cs" />
+    <Compile Include="Models\Entities\Order.cs" />
+    <Compile Include="Models\Entities\OrderArt.cs" />
+    <Compile Include="Models\Entities\Payment.cs" />
+    <Compile Include="Models\Entities\PaymentMethod.cs" />
     <Compile Include="Models\Entities\ShoppingCart.cs" />
     <Compile Include="Models\Entities\CartItem.cs" />
     <Compile Include="Models\Entities\FavArt.cs" />
