--- a/ArtGalleryWebsite.csproj
+++ b/ArtGalleryWebsite.csproj
@@ -168,6 +168,7 @@
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
     <Content Include="Home.aspx" />
     <None Include="Scripts\src\components\ArtCard.vue" />
+    <Content Include="PaymentResult.aspx" />
     <Content Include="User_Control\CartItemNoQty.ascx" />
     <Content Include="User_Control\ErrorLabel.ascx" />
     <Content Include="Web.sitemap" />
@@ -311,11 +312,13 @@
       <DependentUpon>Home.aspx</DependentUpon>
     </Compile>
     <Compile Include="Models\ApiResponse.cs" />
-    <Compile Include="Models\DTO\Address.cs" />
+    <Compile Include="Models\DTO\AddressDTO.cs" />
     <Compile Include="Models\DTO\BillingDetailsDTO.cs" />
     <Compile Include="Models\DTO\CardDTO.cs" />
     <Compile Include="Models\DTO\CartItemDTO.cs" />
     <Compile Include="Models\DTO\OrderDetailDTO.cs" />
+    <Compile Include="Models\DTO\PaymentDTO.cs" />
+    <Compile Include="Models\DTO\PaymentMethodDTO.cs" />
     <Compile Include="Models\DTO\PaymentMethodDTO.cs" />
     <Compile Include="Models\DTO\ShoppingCartDTO.cs" />
     <Compile Include="Models\Entities\Address.cs" />
@@ -350,6 +353,13 @@
     <Compile Include="Models\DTO\FavDTO.cs" />
     <Compile Include="Models\ISqlParser.cs" />
     <Compile Include="Models\AuthRole.cs" />
+    <Compile Include="PaymentResult.aspx.cs">
+      <DependentUpon>PaymentResult.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="PaymentResult.aspx.designer.cs">
+      <DependentUpon>PaymentResult.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SiteMap.aspx.cs">
       <DependentUpon>SiteMap.aspx</DependentUpon>
