Fixed purcharse history

--- a/Web.config
+++ b/Web.config
@@ -13,7 +13,7 @@
   </connectionStrings>
 
   <system.web>
-    <customErrors mode="On" defaultRedirect="~/Error_Pages/Internal.aspx">
+    <customErrors mode="RemoteOnly" defaultRedirect="~/Error_Pages/Internal.aspx">
       <error statusCode="404" redirect="~/Error_Pages/Oops.aspx" />
       <error statusCode="500" redirect="~/Error_Pages/Internal.aspx" />
     </customErrors>
